import "client.comm.proto";
package client;

// 穴位数据
message acupoint_info {
	required uint32 index         = 1[default = 0]; // 穴位的编号
	required uint32 status        = 2[default = 0]; // 穴位的状态 0 未激活 1 激活 2 冰封
	required uint32 act_count     = 5[default = 0]; // 激活失败的次数
}

// 心法列表（发给客户端）
message potential_info_list {
	required uint32 unixtime =1;
	optional server_head  svr_head      = 1000;
}

message potential_info_list_rsp {
	required role_data		   rd		    = 2; // 角色数据
	repeated client_point_info point_info	= 1; // 穴位数据
}

message client_point_info {
	required uint32 index         = 1[default = 0]; // 穴位的编号
	required uint32 status        = 2[default = 0]; // 穴位的状态 0 未激活 1 激活 2 冰封
}

enum ACTIVITION_TYPE {
	ACT_TYPE_ACT  = 1; // 激活
	ACT_TYPE_ICE  = 2; // 冰封
}
// 激活心法
message act_potential_req {
	required ACTIVITION_TYPE type       = 1; // 激活类型
	required uint32       index         = 2; // 心法编号
	optional server_head  svr_head      = 1000;
}

message act_potential_rsp {
	enum result {
		success     = 1; // 成功
		failed      = 2; // 失败
	}
	required result              result_type   = 1;
	repeated client_point_info   point_info    = 2;
}
// 通知获得冲击波经验
message potential_share_rsp {
	required string name	   = 1; // 给你经验的人名字
	required uint32 add_exp    = 2; // 获得的经验
	required uint64 role_id    = 3; // 给你经验的人角色ID
}

message record_exp{
	optional uint32 old_exp = 1;
	optional uint32 new_exp = 2;
	optional uint32 add_exp = 3;
}

message effects_brocast_rsp {
	required uint32 role_id			= 1;// 角色ID
	required uint32 effect_type     = 2;// 特效ID： 1.心法特效
}